--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,4 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 body {
   background-image: url("./icons/background-image.jpg");
   height: 100%;
@@ -54,4 +23,30 @@ table {
 }
 .gameDuration {
   font-weight: 600;
+}
+.priceInput {
+  background: transparent;
+  border: none;
+  outline: none;
+  color: rgb(224, 225, 226);
+  font-size: 18px;
+}
+.loadingState {
+  height: 20px;
+  border-radius: 50%;
+  width: 20px;
+  overflow: hidden;
+  background: green;
+  position: fixed;
+  top: 5px;
+  left: 5px;
+}
+.loadingState.loading {
+  background-color: yellow;
+}
+.loadingState.error {
+  background-color: red;
+}
+.loadingState.success {
+  background-color: green;
 }
