--- a/src/App.css
+++ b/src/App.css
@@ -117,5 +117,13 @@ table {
 .packageWrapper form > * {
   margin-right: 10px;
   color: black;
+}
 
+.hideButton,
+.dropDownPacks {
+  visibility: hidden;
+}
+.gameWrapper:hover .hideButton,
+.gameWrapper:hover .dropDownPacks {
+  visibility: visible;
 }
