--- a/src/App.css
+++ b/src/App.css
@@ -122,9 +122,14 @@ input {
   display: flex;
   width: 100%;
   margin: 2px 0;
+  color: white;
 }
 .dlcName {
   flex-grow: 1;
+}
+
+.packWrapper {
+  color: white;
 }
 
 .options {
