--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@ body {
   font-family: Lato, sans-serif;
 }
 
-input {
-  color: white;
-}
+/*input {*/
+/*  color: white;*/
+/*}*/
 
 .gameDuration {
   font-weight: 600;
