--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -24,6 +24,24 @@
   padding: 20px 10px;
 }
 
-.white {
+.items {
   color: white;
+}
+
+.item {
+  display: flex;
+  width: 100%;
+  margin: 2px 0;
+
+  & > :first-child {
+    flex-grow: 1;
+  }
+}
+
+.details {
+  display: none;
+
+  &.expanded {
+    display: block;
+  }
 }
