--- a/src/components/GameDetails/GameDetails.module.scss
+++ b/src/components/GameDetails/GameDetails.module.scss
@@ -43,25 +43,29 @@
   }
 }
 
-
-.icons {
+.status {
   height: 100%;
   display: flex;
   align-items: center;
 
-  & > * {
-    margin: 10px;
-  }
-}
+  span {
+    font-size: 25px;
+    line-height: 69px;
+    margin: 0 10px;
 
-.infiniteIcon {
-  font-size: 18px;
+    &.endless {
+      font-size: 30px;
+    }
+  }
 }
 
 .gameDuration {
   font-size: 26px;
   min-width: 120px;
   text-align: right;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 @media all and (max-width: 500px) {
