--- a/src/components/GameDetails/GameDetails.module.scss
+++ b/src/components/GameDetails/GameDetails.module.scss
@@ -16,6 +16,12 @@
 .gameName {
   font-size: 20px;
   margin-bottom: 5px;
+
+  img {
+    height: 18px;
+    margin-top: -5px;
+    margin-left: 7px;
+  }
 }
 
 .gameMinorInfo {
